Fixed the sonar issues and optimized the pipeline